update files of remote junit to version r6.0.0 via gt